<resources>
    <string name="app_name">Nexus App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="voltar">Voltar</string>
    <string name="aluno">Aluno</string>
    <string name="valor_hora">Valor/Hora</string>
    <string name="agenda">Agenda</string>
    <string name="financeiro">Financeiro</string>
    <string name="vizualizar">Vizualizar</string>
    <string name="atualizar">Atualizar</string>
    <string name="excluir">Excluir</string>
    <string name="adicionar">adicionar</string>
    <string name="pesquisar">pesquisar</string>
    <string name="data_de_nascimento">Data de Nascimento:</string>
    <string name="e_mail">E-mail:</string>
    <string name="celular">Celular:</string>
    <string name="cpf">CPF:</string>
</resources>
